src/test/deca/syntax/invalid/Lex_test/lex_motsreserve_valid.deca
// Test mots reserve
// Resultat: il ne faut pas que ce soit des IDENT
asm
extends
if
else
false
true
readint
readFloat
printlnx
printx
protected
while


